# remux

./: .gitignore  Cargo.toml  README.md  build.rs
src/: app.rs  config.rs  main.rs  video-device.proto  video_device_monitor.rs
src/com/: service.rs
src/video/: device_monitor.rs  mod.rs  streamer.rs  video_device_monitor.rs
src/video/rtsp/: pipeline.rs
src/video/v4l2/: device_monitor.rs  mod.rs  pipeline.rs
test/: config.toml
