[package]
name = "remux"
version = "0.1.0"
edition = "2024"
authors = ["Omar AKHARAZ <omar.akharaz@gmail.com>"]
description = "A Rust-based video device monitoring library using GStreamer and Protocol Buffers"
license = "AGPL-3.0"
repository = "https://FIXME"
keywords = ["video", "camera", "v4l2", "gstreamer", "protobuf"]
categories = ["multimedia::video", "hardware-support"]

[dependencies]
anyhow = "1.0"
bytes = "1.9.0"
clap = { version = "4.6.0", features = ["derive"] }
clap_complete = "4.5"
glib = "0.21.5"
gst-plugin-zenoh = "0.3.2"
gstreamer = "0.24.4"
prost = "0.14.1"
serde = "1.0.228"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros", "signal", "sync", "time"] }
toml = "1.1.2"
zenoh = "1.7.1"

[dev-dependencies]
tempfile = "3"

[build-dependencies]
prost-build = "0.14.1"
